Donghae Line, Busan-Gimhae LRT added

--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
             </tr>
             <tr>
                 <td onclick='loadData("busan", 1004);'>부산4호선</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
+                <td onclick='loadData("busan", 1101);'>동해선</td>
+                <td onclick='loadData("busan", 1102);'>부산김해경전철</td>
             </tr>
             <tr>
                 <td onclick='loadData("daegu", 1001);'>대구1호선</td>
@@ -313,6 +313,8 @@
                 colors['1002'] = '#81BF48';
                 colors['1003'] = '#BB8C00';
                 colors['1004'] = '#217DCB';
+                colors['1101'] = '#0054A6';
+                colors['1102'] = '#875CAC';
             } else if (region == 'daegu') {
                 colors['1001'] = '#D93F5C';
                 colors['1002'] = '#00AA80';
