--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                 {x: 50, y: 300, sta: '신답'},
                 {x: 50, y: 200, sta: '용두'},
                 {x: 50, y: 100, sta: '신설동'}, //성수지선 끝
-                {x: 50, y: 2530, sta: '(지선)'}, //신도림역, 신정지선
+                {x: 50, y: 2530, sta: '(지선)'}, //신도림역, 신정지선 시작
                 {x: 50, y: 2600, sta: '도림천'},
                 {x: 50, y: 2700, sta: '양천구청'},
                 {x: 50, y: 2800, sta: '신정네거리'},
