--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 colors['1500'] = '#0090D2';
                 colors['1501'] = '#759CCE';
                 colors['1502'] = '#F5A251';
-                colors['1601'] = '#9A6884';
+                // colors['1601'] = '#9A6884'; 서울 ~ 수서 구간 선로 없음
             } else if (region == 'busan') {
                 colors['1001'] = '#F06A00';
                 colors['1002'] = '#81BF48';
@@ -669,6 +669,30 @@
                 {x: 50, y: 5350, sta: '원덕'},
                 {x: 50, y: 5450, sta: '용문'},
                 {x: 50, y: 5550, sta: '지평'} //중앙선 끝
+            ]
+        };
+        mapData[1601] = {
+            color: '#9A6884',
+            height: 1100,
+            lines: [{
+                type: 'polyline',
+                data: '50,50 50,550'
+            }, {
+                type: 'polyline',
+                data: '50,750 50,1050'
+            }],
+            points: [
+                {x: 50, y: 50, sta: '운정중앙'},
+                {x: 50, y: 150, sta: '킨텍스'},
+                {x: 50, y: 250, sta: '대곡'},
+                {x: 50, y: 350, sta: '창릉 (미개통)'},
+                {x: 50, y: 450, sta: '연신내'},
+                {x: 50, y: 550, sta: '서울역'},
+                {x: 50, y: 650, sta: '삼성 (미개통)'},
+                {x: 50, y: 750, sta: '수서'},
+                {x: 50, y: 850, sta: '성남'},
+                {x: 50, y: 950, sta: '구성'},
+                {x: 50, y: 1050, sta: '동탄'}
             ]
         };
 
